bug fix: class loader path